--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "nuxt-theory",
   "version": "1.0.0",
   "engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "npm": "6.x"
   },
   "description": "My super-excellent Nuxt.js project",
   "author": "Vladilen",
@@ -11,7 +12,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
